--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,4 @@
 {
-
   "description": "",
   "manifest_version": 2,
   "name": "Racka",
@@ -11,7 +10,7 @@
   ],
 
   "browser_action": {
-	  "default_popup": "dist/index.html"
+	  "default_popup": "dist/popup.html"
   }
 
 }
