--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "release": "webpack --mode production",
-    "dev": "webpack-dev-server --mode development --open --hot",
-    "lint": "eslint src"
+    "build": "run-s webpack:dev tailwind",
+    "webpack:dev": "webpack",
+    "webpack:release": "webpack --mode production",
+    "webpack:preview": "webpack-dev-server --mode development --open --hot",
+    "tailwind": "tailwindcss -i tailwind.css -o ./dist/tailwind.css",
+    "release": "run-s webpack:release tailwind",
+    "lint": "eslint src",
+    "web-ext": "web-ext run",
+    "dev": "run-s tailwind web-ext"
   },
   "eslintConfig": {
     "extends": "preact",
@@ -19,17 +24,22 @@
     "eslint": "^8.30.0",
     "eslint-config-preact": "^1.3.0",
     "preact-cli": "^3.4.2",
+    "web-ext": "^7.6.2",
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-transform-react-jsx": "^7.21.5",
     "@babel/preset-env": "^7.21.5",
+    "@preact/signals": "^1.1.3",
     "babel-loader": "^9.1.2",
+    "epubjs": "^0.3.93",
     "html-webpack-plugin": "^5.5.1",
+    "npm-run-all": "^4.1.5",
     "preact": "^10.11.3",
     "preact-render-to-string": "^5.2.6",
     "preact-router": "^3.2.1",
+    "tailwindcss": "^3.3.2",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   }
