--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "scripts": {
     "build": "run-s webpack:dev tailwind",
+    "preview": "run-s webpack:preview",
+    "release": "run-s webpack:release tailwind",
     "webpack:dev": "webpack",
     "webpack:release": "webpack --mode production",
     "webpack:preview": "webpack-dev-server --mode development --open --hot",
     "tailwind": "tailwindcss -i tailwind.css -o ./dist/tailwind.css",
-    "release": "run-s webpack:release tailwind",
     "lint": "eslint src",
     "web-ext": "web-ext run",
     "dev": "run-s tailwind web-ext"
@@ -33,12 +34,12 @@
     "@babel/preset-env": "^7.21.5",
     "@preact/signals": "^1.1.3",
     "babel-loader": "^9.1.2",
-    "epubjs": "^0.3.93",
     "html-webpack-plugin": "^5.5.1",
     "npm-run-all": "^4.1.5",
     "preact": "^10.11.3",
     "preact-render-to-string": "^5.2.6",
     "preact-router": "^3.2.1",
+    "react-reader": "^1.2.1",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
