--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "preact-render-to-string": "^5.2.6",
     "preact-router": "^3.2.1",
     "react-reader": "^1.2.1",
+    "striptags": "^3.2.0",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
