--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-reader": "^1.2.1",
     "striptags": "^3.2.0",
     "tailwindcss": "^3.3.2",
+    "ts-loader": "^9.4.3",
     "webpack": "^5.82.1",
     "webpack-cli": "^5.1.1"
   }
