--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,10 @@
   "name": "Racka",
   "version": "1.0",
 
-  "permissions": [
-	  "activeTab",
-	  "tabs"
-  ],
+  "permissions": ["activeTab", "tabs"],
 
   "browser_action": {
     "default_icon": "icons/racka_logo.png",
-	  "default_popup": "dist/popup.html"
+    "default_popup": "dist/popup.html"
   }
 }
