--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "racka",
   "version": "0.0.0",
   "license": "MIT",
@@ -13,7 +13,9 @@
     "tailwind": "tailwindcss -i tailwind.css -o ./dist/tailwind.css",
     "lint": "eslint src",
     "web-ext": "web-ext run",
-    "dev": "run-s tailwind web-ext"
+    "dev": "run-s tailwind web-ext",
+    "format:fix": "prettier --write ./src",
+    "format": "prettier --check ./src"
   },
   "eslintConfig": {
     "extends": "preact",
@@ -39,6 +41,7 @@
     "preact": "^10.11.3",
     "preact-render-to-string": "^5.2.6",
     "preact-router": "^3.2.1",
+    "prettier": "^2.8.8",
     "react-reader": "^1.2.1",
     "striptags": "^3.2.0",
     "tailwindcss": "^3.3.2",
